# igi-tools

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: format_olm.md  format_qvm.md  format_res.md  formats.md
gconv/: README.md  example_01.qsc
src/igi/: __init__.py  cli.py  config.py
src/igi/analyse/: cli.py
src/igi/config/: __init__.py  cli.py
src/igi/dev/: cli.py
src/igi/game/: cli.py
src/igi/qvm/: cli.py
src/igi/res/: cli.py  models.py
src/igi/wav/: adpcm.py  cli.py
src/igipy/: __init__.py  cli.py  config.py  managers.py  models.py  utils.py
src/igipy/cli/: __init__.py  dev.py  igi1.py
src/igipy/codec/: adpcm.py
src/igipy/dev/: cli.py
src/igipy/formats/: __init__.py  base.py  const.py  ilff.py  mef.py  qsc.py  qvm.py  res.py  tex.py  tga.py  wav.py
src/igipy/formats/utils/: ins.py
src/igipy/olm/: cli.py  models.py
src/igipy/qvm/: cli.py  models.py
src/igipy/res/: cli.py  models.py
src/igipy/tex/: cli.py  models.py  setup.py  tga.py
src/igipy/wav/: cli.py  models.py
